--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# target
+target
+target/*
+
+# eclipse
+.settings
+.settings/*
+.project
+.classpath
+
+# idea
+.idea
+.idea/*
+*.iml
+
+# svn
+.svn/
+.svn/*
