--- a/dubbo/dubbo-customer/src/main/resources/application.properties
+++ b/dubbo/dubbo-customer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=81
 
 dubbo.application.name=dubbo-customer
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.protocol=zookeeper
+dubbo.registry.address=centos-100:2181,centos-101:2181,centos-102:2181
