--- a/dubbo/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo/dubbo-provider/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=82
 
 dubbo.application.name=dubbo-provider
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.protocol=zookeeper
+dubbo.registry.address=centos-100:2181,centos-101:2181,centos-102:2181
 dubbo.scan.base-packages= pers.panqt.dubbo.provider.service
