--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,58 @@
-# Compiled class file
+### Compiled class file ###
 *.class
 
-# Log file
+### Log file ###
 *.log
 
-# BlueJ files
-*.ctxt
+### Target ###
+target/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### Out ###
+out/
 
-# Package Files #
+### Package Files ###
 *.jar
 *.war
-*.ear
 *.zip
+*.tar
+*.tar
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# target
-target
-target/*
-
-# eclipse
-.settings
-.settings/*
+### Eclipse ###
+.settings/
 .project
 .classpath
 
-# idea
+### IntelliJ IDEA ###
 .idea
-.idea/*
+*.iws
 *.iml
+*.ipr
 
-# svn
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
+
+### SVN ###
 .svn/
-.svn/*
 
-# out
-out/
-out/*
-
-#spring init
+### Spring Init ###
 .mvn/*
+
+### Virtual Machine ###
+hs_err_pid*
+*.hprof
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
