--- a/springboot/src/main/resources/config/common/application-devtools.properties
+++ b/springboot/src/main/resources/config/common/application-devtools.properties
@@ -6,3 +6,7 @@ spring.devtools.restart.enabled=true
 #@see https://www.cnblogs.com/TechSnail/p/7690829.html
 #@see https://github.com/livereload/LiveReload2
 #@see http://livereload.com/
+
+
+#\u4FEE\u6539\u4E0D\u91CD\u542F\u7684\u6587\u4EF6\u5939
+#org.springframework.boot.devtools.autoconfigure.DevToolsProperties.Restart#DEFAULT_RESTART_EXCLUDES
