--- a/springboot/src/main/resources/config/single/application-datasource.properties
+++ b/springboot/src/main/resources/config/single/application-datasource.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:mysql://centos-200:3306/springboot?serverTimezone=Asi
 spring.datasource.username=panqt
 spring.datasource.password=panqt
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
 #spring.datasource.tomcat.init-s-q-l=SET NAMES utf8mb4 COLLATE utf8mb4_general_ci
