--- a/springboot/src/main/resources/mybatis/generator/mybatisGeneratorinit.properties
+++ b/springboot/src/main/resources/mybatis/generator/mybatisGeneratorinit.properties
@@ -5,4 +5,6 @@ jdbc_password=panqt
 models=H:\\java
 resources=H:\\resources
 dao=H:\\java
+
+# \u4E0D\u8BBE\u7F6E\u4F1A\u5BFC\u51FA\u7CFB\u7EDF\u8868
 nullCatalogMeansCurrent=false
