--- a/springboot/src/main/resources/config/common/application-web.properties
+++ b/springboot/src/main/resources/config/common/application-web.properties
@@ -1,6 +1,9 @@
 # \u670D\u52A1\u5668\u7AEF\u53E3
 server.port=80
+#server.servlet.context-path=/springboot/
 
 #session \u5171\u4EAB
 spring.session.store-type=redis
 
+#\u5173\u95ED\u9ED8\u8BA4\u7684favicon.ico
+spring.mvc.favicon.enabled=false
