--- a/springboot/src/main/resources/config/common/application-web.properties
+++ b/springboot/src/main/resources/config/common/application-web.properties
@@ -1,6 +1,6 @@
 # \u670D\u52A1\u5668\u7AEF\u53E3
 server.port=80
-#server.servlet.context-path=/springboot/
+server.servlet.context-path=/springboot/
 
 #session \u5171\u4EAB
 spring.session.store-type=redis
