--- a/java-core/pom.xml
+++ b/java-core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>per.panqt</groupId>
-    <artifactId>javase</artifactId>
+    <artifactId>java-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
