--- a/springboot/src/main/resources/config/cluter/application-datasource.properties
+++ b/springboot/src/main/resources/config/cluter/application-datasource.properties
@@ -1,15 +1,8 @@
-#spring.datasource.url=jdbc:mysql://centos-200:3306/study?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
-#spring.datasource.username=panqt
-#spring.datasource.password=panqt
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
-
-# MySQL-Cluster
-spring.datasource.url=jdbc:mysql://centos-97:8066/springboot_demo?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
+# MySQL-Cluster \u8FDEMyCat
+spring.datasource.url=jdbc:mysql://centos-97:8066/springboot?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=mycat
 spring.datasource.password=mycat
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
-
-
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
 #spring.datasource.tomcat.init-s-q-l=SET NAMES utf8mb4 COLLATE utf8mb4_general_ci
