--- a/springboot/src/main/resources/config/cluter/application-rabbitmq.properties
+++ b/springboot/src/main/resources/config/cluter/application-rabbitmq.properties
@@ -1,4 +1,3 @@
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.addresses=centos-100:5672,centos-101:5672,centos-102:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
