--- a/springboot/src/main/resources/config/common/application-devtools.properties
+++ b/springboot/src/main/resources/config/common/application-devtools.properties
@@ -1,7 +1,9 @@
 spring.devtools.livereload.enabled=true
 spring.devtools.livereload.port=35729
 spring.devtools.restart.enabled=true
-#@see http://localhost:35729/livereload.js?snipver=1 \u6D4B\u8BD5livereload\u5F00\u542F
+
+#\u6D4B\u8BD5livereload\u5F00\u542F
+#@see http://localhost:35729/livereload.js?snipver=1
 
 #@see https://www.cnblogs.com/TechSnail/p/7690829.html
 #@see https://github.com/livereload/LiveReload2
