--- a/springboot/src/main/resources/config/common/application-pagehelper.properties
+++ b/springboot/src/main/resources/config/common/application-pagehelper.properties
@@ -13,4 +13,4 @@ pagehelper.params=count=countSql
 
 pagehelper.offset-as-page-num=true
 
-#@see https://github.com/pagehelper/Mybatis-PageHelper/blob/master/wikis/zh/HowToUse.md
+#\u8BE6\u7EC6\u914D\u7F6E\uFF1A https://github.com/pagehelper/Mybatis-PageHelper/blob/master/wikis/zh/HowToUse.md
