--- a/springboot/src/main/resources/config/common/application.properties
+++ b/springboot/src/main/resources/config/common/application.properties
@@ -1,7 +1,7 @@
-# \u5F00\u542Fdubug
-debug=false
-
 #\u5BFC\u5165\u914D\u7F6E \u683C\u5F0F\u662F application-xxx.properties
 spring.profiles.active=web,datasource,elasticsearch,fastdfs,mail,mybatis,rabbitmq,redis,devtools,pagehelper,thymeleaf
 
 #pom.xml \u4E2D\u914D\u7F6E\u4E86\u6253\u5305\u7684\u8DEF\u5F84 \u4E0E \u73AF\u5883\u9009\u62E9
+
+# \u5F00\u542Fspringboot dubug\u6A21\u5F0F
+debug=false
