--- a/springboot/src/main/resources/config/single/application-fastdfs.properties
+++ b/springboot/src/main/resources/config/single/application-fastdfs.properties
@@ -1,9 +1,10 @@
-
 # FastDFS Single
 fdfs.so-timeout=1501
 fdfs.connect-timeout=601
 fdfs.thumb-image.width=150
 fdfs.thumb-image.height=150
 fdfs.tracker-list=centos-200:22122
+
+# storage \u8BBF\u95EE\u8DEF\u5F84
 fdfs.web-server-url=http://centos-200:80/
 
