--- a/springboot/src/main/resources/config/cluter/application-redis.properties
+++ b/springboot/src/main/resources/config/cluter/application-redis.properties
@@ -1,7 +1,6 @@
-spring.redis.host=localhost
+spring.redis.cluster.max-redirects=
+spring.redis.cluster.nodes=centos-100:6379,centos-101:6379,centos-102:6379,centos-100:6380,centos-101:6380,centos-102:6380
 spring.redis.database=0
-spring.redis.port=6379
-#spring.redis.password=123456
 
 # \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.jedis.pool.max-active=8
