--- a/springboot/src/main/resources/config/cluter/application-fastdfs.properties
+++ b/springboot/src/main/resources/config/cluter/application-fastdfs.properties
@@ -1,10 +1,20 @@
 # Fastdfs Cluster
-fdfs.so-timeout=1501
-fdfs.connect-timeout=601
+fdfs.so-timeout=1500
+fdfs.connect-timeout=600
 fdfs.thumb-image.width=150
 fdfs.thumb-image.height=150
-fdfs.tracker-list=centos-100:22122,centos-101:22122
+#fdfs.tracker-list=centos-100:22122,centos-102:22122
+fdfs.tracker-list[0]=centos-100:22122
+fdfs.tracker-list[1]=centos-102:22122
+
+fdfs.
+fdfs.pool.max-total=153
+fdfs.pool.max-wait-millis=102
 
 # storage \u8BBF\u95EE\u8DEF\u5F84
-fdfs.web-server-url=http://centos-99:80/
+fdfs.web-server-url=http://centos-99:88/
+
+
+# tarcker leader kill   \u540E\uFF0C\u5730\u5740\u4E0D\u80FD\u9A6C\u4E0A\u7981\u7528\u3002\u3002\u521D\u6B65\u89C2\u5BDF\u5230\u662Fapache.commons.pool2
+#                       \u83B7\u5F97\u5931\u6548\u7684 \u4E3B\u673A \u540E\u4F9D\u7136\u8FD4\u56DE\u4E86 \u8FDE\u63A5
 
