--- a/springboot/src/main/resources/config/cluter/application-rabbitmq.properties
+++ b/springboot/src/main/resources/config/cluter/application-rabbitmq.properties
@@ -1,3 +1,4 @@
-spring.rabbitmq.addresses=centos-100:5672,centos-101:5672,centos-102:5672
+spring.rabbitmq.addresses=centos-101:5672,centos-102:5672,centos-103:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=custom
