--- a/springboot/src/main/resources/shell/installed-service.conf
+++ b/springboot/src/main/resources/shell/installed-service.conf
@@ -1,11 +1,8 @@
-mycat
-nginx
-keepalived
-mysql
-elasticsearch
-fdfs_storaged
-fdfs_trackerd
-rabbitmq
-redis-6379
-redis-6380
-zookeeper
+nginx#nginx: master process
+fdfs_storaged#fdfs_storaged
+redis-6380#redis-server 192.168.100.103:6379
+rabbitmq#rabbitmq start
+mycat#io.mycat.MycatStartup
+elasticsearch#/usr/java/elasticsearch
+keepalived#keepalived
+mysql#/usr/java/mysql
