--- a/springboot/src/main/resources/config/common/application-web.properties
+++ b/springboot/src/main/resources/config/common/application-web.properties
@@ -7,3 +7,5 @@ spring.session.store-type=redis
 
 #\u5173\u95ED\u9ED8\u8BA4\u7684favicon.ico
 spring.mvc.favicon.enabled=false
+
+spring.session.timeout=
