--- a/dubbo/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo/dubbo-provider/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=82
-
+dubbo.application.qos-port=
 dubbo.application.name=dubbo-provider
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=centos-100:2181,centos-101:2181,centos-102:2181
