集群高可用 测试通过

--- a/springboot/src/main/resources/config/cluter/application-datasource.properties
+++ b/springboot/src/main/resources/config/cluter/application-datasource.properties
@@ -6,3 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #spring.datasource.type=com.mchange.v2.c3p0.ComboPooledDataSource
 #spring.datasource.tomcat.init-s-q-l=SET NAMES utf8mb4 COLLATE utf8mb4_general_ci
+
+# \u96C6\u7FA4\u6D4B\u8BD5\u6210\u529F\uFF0C
+# \u53CC\u4E3B\u53CC\u4ECE + mycat
+# \u6240\u6709\u5199\u64CD\u4F5C\u53D1\u9001\u5230\u914D\u7F6E\u7684\u7B2C\u4E00\u4E2A writeHost\uFF0C\u7B2C\u4E00\u4E2AwriteHost\u6302\u4E86\u5207\u6362\u751F\u5B58\u7684\u7B2C\u4E8C\u4E2AwriteHost
+# \u4E0D\u4F1A\u8BFB\u53D6 \u6302\u4E86\u7684writeHost\u7684readhost(slave)
