--- a/springboot/src/main/resources/config/cluter/application-fastdfs.properties
+++ b/springboot/src/main/resources/config/cluter/application-fastdfs.properties
@@ -15,6 +15,6 @@ fdfs.pool.max-wait-millis=102
 fdfs.web-server-url=http://centos-99:88/
 
 
-# tarcker leader kill   \u540E\uFF0C\u5730\u5740\u4E0D\u80FD\u9A6C\u4E0A\u7981\u7528\u3002\u3002\u521D\u6B65\u89C2\u5BDF\u5230\u662Fapache.commons.pool2
-#                       \u83B7\u5F97\u5931\u6548\u7684 \u4E3B\u673A \u540E\u4F9D\u7136\u8FD4\u56DE\u4E86 \u8FDE\u63A5
-
+# \u96C6\u7FA4\u6D4B\u8BD5\u6210\u529F\uFF0Ctracker leader \u80FD\u6545\u969C\u8F6C\u79FB
+# \u505C\u6389\u5168\u90E8group1\u7684storage,tracker\u4E5F\u80FD\u628A\u4E0A\u4F20\u5168\u90E8\u5206\u53D1\u5230group2
+# \u505C\u6389group1\u4E2D\u7684\u4E00\u4E2Anginx(\u7528\u4E8E\u8BBF\u95EE\u6587\u4EF6)\uFF0Cnginx\u4E5F\u80FD\u5206\u53D1\u5230group1\u7684\u5176\u4ED6\u4E3B\u673A
