--- a/springboot/src/main/resources/config/cluter/application-rabbitmq.properties
+++ b/springboot/src/main/resources/config/cluter/application-rabbitmq.properties
@@ -2,3 +2,6 @@ spring.rabbitmq.addresses=centos-101:5672,centos-102:5672,centos-103:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=custom
+
+
+# \u96C6\u7FA4\u6D4B\u8BD5\u6210\u529F\uFF0C\u80FD\u6545\u969C\u8F6C\u79FB
