--- a/springboot/src/main/resources/config/cluter/application-elasticsearch.properties
+++ b/springboot/src/main/resources/config/cluter/application-elasticsearch.properties
@@ -1,3 +1,6 @@
 # ElasticSearch-Cluster
 spring.data.elasticsearch.cluster-name=panqt-es
 spring.data.elasticsearch.cluster-nodes=centos-101:9300,centos-102:9300,centos-103:9300
+
+# \u96C6\u7FA4\u6D4B\u8BD5\u6210\u529F
+# \u6CE8\u610F\uFF1A\u5F53\u53EA\u5269\u4E0B\u4E00\u53F0\u4E3B\u673A\u65F6\uFF0C\u53EA\u80FD\u8BFB\u53D6\uFF0C\u65E0\u6CD5\u5199\u5165 master_not_discovered_exception\uFF0C\u5176\u4F59\u65F6\u95F4\u6B63\u5E38
