--- a/springboot/src/main/resources/config/cluter/application-redis.properties
+++ b/springboot/src/main/resources/config/cluter/application-redis.properties
@@ -1,22 +1,25 @@
-spring.redis.cluster.max-redirects=30
+
 spring.redis.cluster.nodes=centos-100:6379,centos-101:6379,centos-102:6379,centos-103:6379,centos-100:6380,centos-102:6380
 spring.redis.database=0
 
 # \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.jedis.pool.max-active=8
-# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-#spring.redis.jedis.pool.max-wait=-1
 # \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.jedis.pool.max-idle=8
 # \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.jedis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
-spring.redis.timeout=PT30S
-spring.redis.lettuce.shutdown-timeout=PT30S
-spring.redis.lettuce.pool.min-idle=0
-spring.redis.lettuce.pool.max-wait=PT30S
-spring.redis.lettuce.pool.max-idle=8
-spring.redis.lettuce.pool.max-active=8
+spring.redis.timeout=15S
+#spring.redis.cluster.max-redirects=1
 
 spring.cache.redis.key-prefix=springboot
 spring.cache.redis.use-key-prefix=true
+
+# jedis \u80FD\u591F\u8FDB\u884C\u6545\u969C\u8F6C\u79FB\uFF0Cletture\u4E0D\u884C\uFF0C\u539F\u56E0\u4E0D\u77E5\u9053(\uFFE3\u25BD\uFFE3)"
+
+
+#spring.redis.lettuce.shutdown-timeout=15S
+#spring.redis.lettuce.pool.min-idle=0
+#spring.redis.lettuce.pool.max-wait=20s
+#spring.redis.lettuce.pool.max-idle=8
+#spring.redis.lettuce.pool.max-active=8
