--- a/dubbo/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo/dubbo-provider/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-server.port=82
-dubbo.application.qos-port=
+server.port=83
+dubbo.protocol.port=20881
 dubbo.application.name=dubbo-provider
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=centos-100:2181,centos-101:2181,centos-102:2181
+#dubbo.registry.address=centos-100:2181,centos-101:2181,centos-102:2181
+dubbo.registry.address=centos-200:2181
 dubbo.scan.base-packages= pers.panqt.dubbo.provider.service
+
+# 测试dubbo微服务故障转移，通过
