--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -16,7 +16,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springcloud-api</module>
-		<module>springcloud-consumer</module>
+		<module>springcloud-consumer-ribbon</module>
+        <module>springcloud-consumer-feign</module>
         <module>springcloud-provider-8000</module>
 		<module>springcloud-provider-8001</module>
 		<module>springcloud-provider-8002</module>
@@ -41,6 +42,14 @@
                 <groupId>pers.panqt</groupId>
                 <artifactId>springcloud-api</artifactId>
                 <version>${springcloud-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
