--- a/springcloud/springcloud-consumer-ribbon/pom.xml
+++ b/springcloud/springcloud-consumer-ribbon/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>pers.panqt</groupId>
-    <artifactId>springcloud-consumer</artifactId>
+    <artifactId>springcloud-consumer-ribbon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springcloud-consumer</name>
+    <name>springcloud-consumer-ribbon</name>
     <description>Demo project for Spring Boot</description>
     <packaging>jar</packaging>
 
@@ -61,17 +61,6 @@
         <!--</dependency>-->
     </dependencies>
 
-<dependencyManagement>
-<dependencies>
-    <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-    </dependency>
-</dependencies>
-</dependencyManagement>
 
     <build>
         <plugins>
