--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -25,6 +25,7 @@
 		<module>springcloud-eureka-9001</module>
 		<module>springcloud-eureka-9002</module>
         <module>springcloud-hystrix-dashboard</module>
+        <module>springcloud-zuul-7000</module>
     </modules>
     <packaging>pom</packaging>
 
