--- a/springcloud/springcloud-consumer-ribbon/src/main/resources/application-eureka.properties
+++ b/springcloud/springcloud-consumer-ribbon/src/main/resources/application-eureka.properties
@@ -3,4 +3,20 @@ eureka.client.service-url.defaultZone=http://eureka9000.com:9000/eureka/,http://
 #\u4E0D\u5411\u6CE8\u518C\u4E2D\u5FC3\u6CE8\u518C\u81EA\u5DF1
 eureka.client.register-with-eureka=false
 
+#\u8868\u793Aeureka client\u95F4\u9694\u591A\u4E45\u53BB\u62C9\u53D6\u670D\u52A1\u6CE8\u518C\u4FE1\u606F\uFF0C\u9ED8\u8BA4\u4E3A30\u79D2\uFF0C\u5BF9\u4E8Eapi-gateway\uFF0C\u5982\u679C\u8981\u8FC5\u901F\u83B7\u53D6\u670D\u52A1\u6CE8\u518C\u72B6\u6001\uFF0C\u53EF\u4EE5\u7F29\u5C0F\u8BE5\u503C\uFF0C\u6BD4\u59825\u79D2
+eureka.client.registry-fetch-interval-seconds=5
+
 # @EnableEurekaClient
+
+#\u5F00\u542Fribbon\u91CD\u8BD5
+spring.cloud.loadbalancer.retry.enabled=true
+#\u8BF7\u6C42\u8FDE\u63A5\u7684\u8D85\u65F6\u65F6\u95F4
+springcloud-provider.ribbon.ConnectTimeout=250
+#\u8BF7\u6C42\u5904\u7406\u7684\u8D85\u65F6\u65F6\u95F4
+springcloud-provider.ribbon.ReadTimeout=1000
+#\u5BF9\u6240\u6709\u64CD\u4F5C\u8BF7\u6C42\u90FD\u8FDB\u884C\u91CD\u8BD5
+springcloud-provider.ribbon.OkToRetryOnAllOperations=true
+#\u5207\u6362\u5B9E\u4F8B\u7684\u91CD\u8BD5\u6B21\u6570
+springcloud-provider.ribbon.MaxAutoRetriesNextServer=2
+#\u5BF9\u5F53\u524D\u5B9E\u4F8B\u7684\u91CD\u8BD5\u6B21\u6570
+springcloud-provider.ribbon.MaxAutoRetries=1
