--- a/springcloud/springcloud-eureka-9000/src/main/resources/application.properties
+++ b/springcloud/springcloud-eureka-9000/src/main/resources/application.properties
@@ -1,17 +1,22 @@
 #@EnableEurekaServer \u5F00\u542F eureka server
-
+spring.application.name=eureka-server
 server.port=9000
-
+debug=true
 #eureka\u670D\u52A1\u7AEF\u5B9E\u4F8B\u540D\u79F0
 #eureka.instance.hostname=localhost
 eureka.instance.hostname=eureka9000.com
-#\u4E0D\u5411\u6CE8\u518C\u4E2D\u5FC3\u6CE8\u518C\u81EA\u5DF1
-eureka.client.register-with-eureka=false
-#\u4E0D\u9700\u8981\u68C0\u7D22\u670D\u52A1
-eureka.client.fetch-registry=false
+#\u96C6\u7FA4\u5411\u6CE8\u518C\u4E2D\u5FC3\u6CE8\u518C\u81EA\u5DF1
+eureka.client.register-with-eureka=true
+#\u96C6\u7FA4\u9700\u8981\u68C0\u7D22\u670D\u52A1
+eureka.client.fetch-registry=true
 # \u4E0Eeureka\u901A\u4FE1\u5730\u5740
 #eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 
+# \u5254\u9664\u5931\u6548\u670D\u52A1\u95F4\u9694
+eureka.server.eviction-interval-timer-in-ms=5000
+
+#\u5173\u95ED\u5931\u6548\u4FDD\u62A4\u673A\u5236\uFF0C\u4FBF\u4E8E\u5F00\u53D1
+eureka.server.enable-self-preservation=false
 
 # \u4FEE\u6539 hosts\u6587\u4EF6\uFF0C\u6D4B\u8BD5\u96C6\u7FA4
 # 127.0.0.1 eureka9000.com
