--- a/springcloud/springcloud-consumer-feign/src/main/resources/application-hystrix.properties
+++ b/springcloud/springcloud-consumer-feign/src/main/resources/application-hystrix.properties
@@ -1,2 +1,8 @@
 # \u5F00\u542F\u5BA2\u6237\u7AEF\u670D\u52A1\u964D\u7EA7
 feign.hystrix.enabled=true
+# hystrix\u8D85\u65F6\u65F6\u95F4
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+
+# \u538B\u7F29\u8BF7\u6C42\u54CD\u5E94
+feign.compression.request.enabled=true
+feign.compression.response.enabled=true
