--- a/springcloud/springcloud-consumer-ribbon/src/main/resources/application.properties
+++ b/springcloud/springcloud-consumer-ribbon/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=eureka
+spring.application.name=springcloud-comsumer
 server.port=80
+debug=true
 logging.level.pers.panqt.springcloud=debug
