--- a/springcloud/springcloud-provider-8001/src/main/resources/application.properties
+++ b/springcloud/springcloud-provider-8001/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=mybatis,datasource,eureka
-
+debug=true
 server.port=8001
 spring.application.name=springcloud-provider
 logging.level.pers.panqt.springcloud=debug
