--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -14,6 +14,7 @@
     <groupId>pers.panqt</groupId>
     <artifactId>springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <modules>
         <module>springcloud-api</module>
 		<module>springcloud-consumer-ribbon</module>
@@ -26,8 +27,9 @@
 		<module>springcloud-eureka-9002</module>
         <module>springcloud-hystrix-dashboard</module>
         <module>springcloud-zuul-7000</module>
+        <module>springcloud-message-bus</module>
+        <module>springcloud-config-server</module>
     </modules>
-    <packaging>pom</packaging>
 
     <properties>
         <java.version>1.8</java.version>
