--- a/springcloud/springcloud-config-server/src/main/resources/application.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/application.properties
@@ -17,3 +17,10 @@ spring.cloud.config.server.git.search-paths=springcloud/springcloud-message-bus/
 # \u914D\u7F6E\u4E2D\u5FC3 \u4E0E message-bus \u505A\u4E86\u6574\u5408
 
 # \u914D\u7F6E\u4FE1\u606F\u8FD8\u53EF\u4EE5\u52A0\u5BC6,\u9700\u8981\u5B89\u88C5\u4E0D\u9650\u957F\u5EA6\u7684JCE,\u5E76\u5728value\u524D\u9762\u52A0\u4E0A{cipher}
+
+
+# \u914D\u7F6E\u5237\u65B0
+# \u5F15\u5165 spring-boot-starter-actuator
+# \u4FEE\u6539\u914D\u7F6E\u6587\u4EF6\u540E POST\u8BBF\u95EE http://localhost:13000/actuator/refresh
+#               \u6D88\u606F\u603B\u7EBF http://localhost:13000/actuator/bus-refresh
+management.endpoints.web.exposure.include=*
