消息总线改造

--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/messagebus.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/messagebus.properties
@@ -1,5 +1,3 @@
-spring.profiles.active=prod
-
 # RabbitMQ Single
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
@@ -7,5 +5,8 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 spring.application.name=springcloud-message-bus
-server.port=12001
+server.port=12000
+debug=true
 
+
+test.from=dafult-1.0
