--- a/springcloud/springcloud-eureka-9000/src/main/resources/bootstrap.properties
+++ b/springcloud/springcloud-eureka-9000/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 # config-client
-spring.application.name=messagebus
+spring.application.name=eureka9000
 spring.cloud.config.profile=default
 spring.cloud.config.label=master
 spring.cloud.config.uri=http://localhost:13000/
