--- a/springcloud/springcloud-config-server/src/main/resources/application.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=13000
 
 #github
 spring.cloud.config.server.git.uri=https://github.com/panqt/study-notes.git
-spring.cloud.config.server.git.search-paths=springcloud/springcloud-message-bus/src/main/resources/github-remote
+spring.cloud.config.server.git.search-paths=springcloud/springcloud-config-server/src/main/resources/github-remote
 
 
 # http://http://localhost:13000/master/messagebus-prod.properties
@@ -23,4 +23,7 @@ spring.cloud.config.server.git.search-paths=springcloud/springcloud-message-bus/
 # \u5F15\u5165 spring-boot-starter-actuator
 # \u4FEE\u6539\u914D\u7F6E\u6587\u4EF6\u540E POST\u8BBF\u95EE http://localhost:13000/actuator/refresh
 #               \u6D88\u606F\u603B\u7EBF http://localhost:13000/actuator/bus-refresh
-management.endpoints.web.exposure.include=*
+#               \u5237\u65B0\u6307\u5B9A http://localhost:13000/actuator/bus-refresh/springcloud-message-bus
+# \u5BA2\u6237\u7AEF TestController\u9700\u8981\u52A0 @RefreshScope
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=bus-refresh
