--- a/springcloud/springcloud-provider-8000/src/main/resources/bootstrap.properties
+++ b/springcloud/springcloud-provider-8000/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 # config-client
-spring.application.name=messagebus
-spring.cloud.config.profile=default
+spring.application.name=provider8000
+spring.cloud.config.profile=default,datasource,eureka,mybatis
 spring.cloud.config.label=master
 spring.cloud.config.uri=http://localhost:13000/
 spring.cloud.config.fail-fast=true
