--- a/springcloud/springcloud-config-server/src/main/resources/application.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.application.name=config-server
 server.port=13000
 
 #\u7801\u4E91
-#spring.cloud.config.server.git.uri=git@gitee.com:panqt/test.git
-#spring.cloud.config.server.git.search-paths=dir
+spring.cloud.config.server.git.uri=git@gitee.com:panqt/test.git
+spring.cloud.config.server.git.search-paths=dir
 
 #github
-spring.cloud.config.server.git.uri=https://github.com/panqt/study-notes.git
-spring.cloud.config.server.git.search-paths=springcloud/springcloud-config-server/src/main/resources/github-remote
+#spring.cloud.config.server.git.uri=https://github.com/panqt/study-notes.git
+#spring.cloud.config.server.git.search-paths=springcloud/springcloud-config-server/src/main/resources/github-remote
 
 
 # http://http://localhost:13000/master/messagebus-prod.properties
@@ -27,3 +27,8 @@ spring.cloud.config.server.git.search-paths=springcloud/springcloud-config-serve
 # \u5BA2\u6237\u7AEF TestController\u9700\u8981\u52A0 @RefreshScope
 #management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.include=bus-refresh
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
