--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/dashboard.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/dashboard.properties
@@ -1,5 +1,10 @@
 server.port=11000
 spring.application.name=hystrix-dashboard
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 # http://localhost:11000/hystrix
+# http://localhost:14000/turbine.stream
