--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/eureka9000.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/eureka9000.properties
@@ -23,3 +23,9 @@ eureka.server.enable-self-preservation=false
 # 127.0.0.1 eureka9001.com
 # 127.0.0.1 eureka9002.com
 eureka.client.service-url.defaultZone=http://eureka9000.com:9000/eureka/,http://eureka9001.com:9001/eureka/,http://eureka9002.com:9002/eureka/
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
