--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/turbine.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/turbine.properties
@@ -1,13 +1,14 @@
-server.port=7000
-spring.application.name=springcloud-zuul
-#spring.profiles.active=ribbon,zuul,hystrix
+
+spring.application.name=springcloud-turbine
+server.port=14000
+management.server.port=14010
 
 eureka.client.service-url.defaultZone=http://eureka9000.com:9000/eureka/,http://eureka9001.com:9001/eureka/,http://eureka9002.com:9002/eureka/
 
-info.app.name=aaaaaa
-info.company.name=bbbbbb
-info.build.artifactId=${project.artifactId}
-info.build.version=${project.version}
+turbine.app-config=springcloud-provider
+turbine.cluster-name-expression="default"
+turbine.combine-host-port=true
+
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
