--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/feignconsumer.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/feignconsumer.properties
@@ -3,3 +3,8 @@ spring.application.name=springcloud-comsumer
 server.port=8080
 debug=true
 logging.level.pers.panqt.springcloud=debug
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
