--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/provider8002.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/provider8002.properties
@@ -3,3 +3,8 @@ debug=true
 server.port=8002
 spring.application.name=springcloud-provider
 logging.level.pers.panqt.springcloud=debug
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
