--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/provider8002.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/provider8002.properties
@@ -1,8 +1,8 @@
 #spring.profiles.active=mybatis,datasource,eureka
-debug=true
+debug=false
+logging.level.root=error
 server.port=8002
 spring.application.name=springcloud-provider
-logging.level.pers.panqt.springcloud=debug
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
