--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/ribbonconsumer.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/ribbonconsumer.properties
@@ -1,8 +1,8 @@
 #spring.profiles.active=eureka
 spring.application.name=springcloud-comsumer
 server.port=8090
-debug=true
-logging.level.pers.panqt.springcloud=debug
+debug=false
+logging.level.root=error
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
