--- a/springcloud/springcloud-config-server/src/main/resources/github-remote/zuul7000.properties
+++ b/springcloud/springcloud-config-server/src/main/resources/github-remote/zuul7000.properties
@@ -1,5 +1,7 @@
 server.port=7000
 spring.application.name=springcloud-zuul
+debug=false
+logging.level.root=error
 #spring.profiles.active=ribbon,zuul,hystrix
 
 eureka.client.service-url.defaultZone=http://eureka9000.com:9000/eureka/,http://eureka9001.com:9001/eureka/,http://eureka9002.com:9002/eureka/
